# numllama

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-lumi.txt  requirements-pyproject.txt
notebooks/: llama_features_corr.ipynb  model_activations_probing_last_tok.ipynb  model_activations_probing_next_tok.ipynb  model_emb_cv_probe.py  model_multitoken_probing.ipynb  model_multitoken_probing_fixed_l5.ipynb  model_multitoken_probing_results.ipynb  num_llama.ipynb  verbal_error_analysis.ipynb  vis_llama_pca_hidden_states.ipynb
numllama/: __init__.py  addition.py  datatypes.py  gadget.py  markup.py  metrics.py  nn.py  numllama.py
scripts/: permutation_utils.py  predict_calc.py  test_calc.py  train_calc.py  utils.py
