[project]
name = "numllama"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core (>=1.3.2,<2.0.0)",
    "tokenizers (>=0.21.1,<0.22.0)",
    "transformers (>=4.50.0,<5.0.0)",
    "lightning (>=2.5.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "wandb (>=0.19.8,<0.20.0)",
    "datasets (>=3.4.1,<4.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "sympy (>=1.13.1,<2.0.0)",
    "accelerate (>=1.5.2,<2.0.0)",
    "sacrebleu (>=2.5.1,<3.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "polars (>=1.30.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "lovely-tensors (>=0.1.18,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.2"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.7"
nbformat = "^5.10.4"


[tool.ruff]
line-length = 130
extend-exclude = ["*.ipynb"]
include = [
    "numllama/**/*.py",
    "tests/**/*.py",
    "scripts/**/*.py",
]